--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,5 @@ services:
       POSTGRES_DB: devSchool
     ports: 
      - "5432:5432"
-
+    volumes:
+     - ./docker/setup.sql:/docker-entrypoint-initdb.d/init.sql
